--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc && node dist/index.js",
+    "start": "node dist/index.js",
     "dev": "NODE_ENV=dev concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch library --watch controllers --watch routes\"",
-    "create-env": "printenv > .env"
+    "create-env": "printenv > .env",
+    "gcp-build": "npx tsc",
+    "build": "npx tsc"
   },
   "author": "Michael Rhee",
   "license": "MIT",
