--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,9 @@ steps:
     args: ["install"]
   - name: node:16.20.0
     entrypoint: npm
+    args: ["run", "build"]
+  - name: node:16.20.0
+    entrypoint: npm
     args: ["run", "create-env"]
     env:
       - "PG_HOST=${_PG_HOST}"
