Switch to staging branch

--- a/staging.yaml
+++ b/staging.yaml
@@ -14,7 +14,7 @@
 # [START gae_flex_quickstart_yaml_v1]
 runtime: nodejs
 env: flex
-service: catalog-preview
+service: catalog-staging
 
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
