--- a/staging.cloudbuild.yaml
+++ b/staging.cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
       - "PG_USER=${_PG_USER}"
     secretEnv: ["PG_PASSWORD", "GOOGLE_APPLICATION_CREDENTIALS"]
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "./preview.yaml"]
+    args: ["app", "deploy", "./staging.yaml"]
 availableSecrets:
   secretManager:
     - versionName: projects/$PROJECT_ID/secrets/WAVLAKE_ALPHA_FIREBASE_ADMIN_CONFIG/versions/latest
