--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+LOGLEVEL=debug
+
 EXPRESS_PORT=3001
 TOP_FORTY_WINDOW=30
 
@@ -6,3 +8,5 @@ PG_PORT=5432
 PG_DATABASE=wavlake
 PG_USER=wavlake
 PG_PASSWORD=wavlake
+
+GOOGLE_APPLICATION_CREDENTIALS="/path/to/firebase_project_creds.json"
