--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,6 +9,7 @@ steps:
     entrypoint: npm
     args: ["run", "create-env"]
     env:
+      - "LOGLEVEL=${_LOGLEVEL}"
       - "PG_HOST=${_PG_HOST}"
       - "PG_PORT=${_PG_PORT}"
       - "PG_DATABASE=${_PG_DATABASE}"
@@ -22,6 +23,6 @@ availableSecrets:
       env: "GOOGLE_APPLICATION_CREDENTIALS"
     - versionName: projects/$PROJECT_ID/secrets/WAVLAKE_PROD_PG_CATALOG_PASSWORD/versions/latest
       env: "PG_PASSWORD"
-timeout: "1600s"
+timeout: "900s"
 options:
   logging: CLOUD_LOGGING_ONLY
