--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=dev concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch library --watch controllers --watch routes\"",
+    "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
     "create-env": "printenv > .env",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "migrate": "knex --knexfile ./db/knexfile.js migrate:latest",
+    "rollback": "knex --knexfile ./db/knexfile.js migrate:rollback"
   },
   "author": "Michael Rhee",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.15.0",
+    "@sentry/node": "^7.54.0",
+    "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.1395.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.9.0",
+    "jimp": "^0.22.8",
     "knex": "^2.4.0",
     "knex-paginate": "^3.0.2",
     "loglevel": "^1.7.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.1"
   },
   "devDependencies": {
@@ -28,6 +37,7 @@
     "@types/node": "^20.2.5",
     "concurrently": "^8.1.0",
     "nodemon": "^2.0.22",
+    "prisma": "^4.15.0",
     "typescript": "^5.1.3"
   }
 }
