--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
     "create-env": "printenv > .env",
     "build": "npx tsc",
-    "migration": "knex --knexfile ./db/knexfile.js migrate:latest",
+    "migrate": "knex --knexfile ./db/knexfile.js migrate:latest",
     "rollback": "knex --knexfile ./db/knexfile.js migrate:rollback",
     "pull": "npx prisma db pull",
     "generate": "npx prisma generate"
