--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "knex": "^2.4.0",
     "knex-paginate": "^3.0.2",
     "loglevel": "^1.7.1",
+    "mp3-duration": "^1.1.0",
     "multer": "^1.4.5-lts.1",
+    "node-lame": "^1.3.2",
     "pg": "^8.7.1"
   },
   "devDependencies": {
