--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "mp3-duration": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "node-lame": "^1.3.2",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "body-parser": "^1.19.0",
+    "compression": "1.7.4",
+    "helmet": "^3.22.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
