--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sentry/node": "^7.54.0",
     "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1395.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "firebase-admin": "^11.9.0",
