Allow blank fields on artist create

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ AWS_S3_IMAGE_PREFIX=image
 AWS_S3_RAW_PREFIX=raw
 
 # FILE UPLOAD MANAGMENT
-LOCAL_UPLOAD_PATH='/tmp/catalog/upload'
-LOCAL_CONVERT_PATH='/tmp/catalog/convert'
+LOCAL_UPLOAD_PATH=/tmp/catalog/upload
+LOCAL_CONVERT_PATH=/tmp/catalog/convert
 
 GOOGLE_APPLICATION_CREDENTIALS="/path/to/firebase_project_creds.json"
