--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Express API for managing and accessing the Wavlake catalog",
   "main": "index.js",
   "engines": {
-    "node": "=v16.20.0"
+    "node": "18.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,10 +24,14 @@
     "@sentry/node": "^7.54.0",
     "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1395.0",
+    "body-parser": "^1.19.0",
+    "compression": "1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "firebase-admin": "^11.9.0",
+    "helmet": "^3.22.0",
     "jimp": "^0.22.8",
     "knex": "^2.4.0",
     "knex-paginate": "^3.0.2",
@@ -35,10 +39,7 @@
     "mp3-duration": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "node-lame": "^1.3.2",
-    "pg": "^8.7.1",
-    "body-parser": "^1.19.0",
-    "compression": "1.7.4",
-    "helmet": "^3.22.0"
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
