--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,7 @@ AWS_S3_RAW_PREFIX=raw
 LOCAL_UPLOAD_PATH=/tmp/catalog/upload
 LOCAL_CONVERT_PATH=/tmp/catalog/convert
 
+SENTRY_DSN=https://<projectkey>@<account>.ingest.sentry.io/<account>
+SENTRY_TRACES_SAMPLE_RATE=1.0
+
 GOOGLE_APPLICATION_CREDENTIALS="/path/to/firebase_project_creds.json"
