--- a/prod.yaml
+++ b/prod.yaml
@@ -20,8 +20,10 @@ service: catalog-prod
 # The settings below are to reduce costs during testing and are not appropriate
 # for production use. For more information, see:
 # https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
+# Resource Settings Guide:
+# https://cloud.google.com/appengine/docs/flexible/reference/app-yaml?tab=node.js#resource-settings
 manual_scaling:
-  instances: 1
+  instances: 2
 resources:
   cpu: 1
   memory_gb: 0.5
