--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ AWS_S3_BUCKET_NAME=<AWS_S3_BUCKET_NAME>
 AWS_CDN_DOMAIN=<AWS_CDN_DOMAIN>
 AWS_CDN_ID=<AWS_CDN_ID>
 AWS_S3_TRACK_PREFIX=track
+AWS_S3_EPISODE_PREFIX=episode
 AWS_S3_IMAGE_PREFIX=image
 AWS_S3_RAW_PREFIX=raw
 
