--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "=v16.20.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node dist/index.js",
     "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
     "create-env": "printenv > .env",
@@ -42,9 +42,13 @@
     "pg": "^8.7.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.4",
     "@types/node": "^20.2.5",
     "concurrently": "^8.1.0",
+    "jest": "^29.6.4",
     "nodemon": "^2.0.22",
     "prisma": "^4.15.0",
     "typescript": "^5.1.3"
