--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,5 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
       - run: npm test
+        env:
+          LOGLEVEL: debug
