--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,4 @@ jobs:
       - run: npm run build --if-present
       - run: npm test
         env:
-          LOGLEVEL: debug
+          LOGLEVEL: error
