--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: ["fix-splits-validations"]
+    branches: ["main"]
   pull_request:
-    branches: ["fix-splits-validations"]
+    branches: ["*"]
 
 jobs:
   build:
