--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "@types/node": "^20.2.5",
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
+    "jest-mock-extended": "^3.0.5",
     "nodemon": "^2.0.22",
     "prisma": "^4.15.0",
+    "supertest": "^6.3.3",
     "typescript": "^5.1.3"
   }
 }
