--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mp3-duration": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "node-lame": "^1.3.2",
+    "nostr-tools": "^1.16.0",
     "pg": "^8.7.1"
   },
   "devDependencies": {
