--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Michael Rhee",
   "license": "MIT",
   "dependencies": {
+    "@noble/hashes": "^1.3.2",
     "@prisma/client": "^4.15.0",
     "@sentry/node": "^7.60.0",
     "@types/multer": "^1.4.7",
