--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "multer": "^1.4.5-lts.1",
     "node-lame": "^1.3.2",
     "nostr-tools": "^1.16.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
