--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@noble/hashes": "^1.3.2",
+    "@podverse/podcast-feed-parser": "^1.1.1",
     "@prisma/client": "^4.15.0",
     "@sentry/node": "^7.60.0",
     "@types/multer": "^1.4.7",
@@ -41,8 +42,7 @@
     "multer": "^1.4.5-lts.1",
     "node-lame": "^1.3.2",
     "nostr-tools": "^1.16.0",
-    "pg": "^8.7.1",
-    "rss-parser": "^3.13.0"
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
