--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,8 @@ SENTRY_DSN=https://<projectkey>@<account>.ingest.sentry.io/<account>
 SENTRY_TRACES_SAMPLE_RATE=1.0
 
 GOOGLE_APPLICATION_CREDENTIALS="/path/to/firebase_project_creds.json"
+
+# Podcast Index API, these may include a hash symbol that will need to be escaped
+# you may need to wrap the key in double quotes
+PODCAST_INDEX_KEY=key
+PODCAST_INDEX_SECRET=secret
