--- a/prod.cloudbuild.yaml
+++ b/prod.cloudbuild.yaml
@@ -30,6 +30,8 @@ steps:
       - "RANDOM_SAMPLE_SIZE=${_RANDOM_SAMPLE_SIZE}"
       - "SENTRY_DSN=${_SENTRY_DSN}"
       - "SENTRY_TRACES_SAMPLE_RATE=${_SENTRY_TRACES_SAMPLE_RATE}"
+      - "PODCAST_INDEX_KEY=${_PODCAST_INDEX_KEY}"
+      - "PODCAST_INDEX_SECRET=${_PODCAST_INDEX_SECRET}"
     secretEnv: ["PG_PASSWORD", "AWS_SECRET_ACCESS_KEY"]
   - name: node:16.20.0
     id: migrate db
