add note for jest env vars

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# ADDING NEW ENV VARS
+# When adding new env vars, please add them to this .env.example file
+# Jest may also need these env vars to be mocked in the .jest/setEnvVars.ts file
+
 LOGLEVEL=debug
 
 RANDOM_SAMPLE_SIZE=70
