--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "node-lame": "^1.3.2",
     "nostr-tools": "^1.16.0",
     "pg": "^8.7.1",
-    "podcast-index-api": "^1.1.10"
+    "podcast-index-api": "^1.1.10",
+    "sanitize-html": "^2.11.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
