--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@noble/hashes": "^1.3.2",
-    "@podverse/podcast-feed-parser": "^1.1.1",
+    "@podverse/podcast-feed-parser": "https://github.com/joshr4/podcast-feed-parser/tree/add-time-split-support",
     "@prisma/client": "^4.15.0",
     "@sentry/node": "^7.60.0",
     "@types/multer": "^1.4.7",
