--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@noble/hashes": "^1.3.2",
+    "@podverse/podcast-feed-parser": "https://github.com/joshr4/podcast-feed-parser/tree/add-time-split-support",
     "@prisma/client": "^4.15.0",
     "@sentry/node": "^7.60.0",
     "@types/multer": "^1.4.7",
@@ -35,13 +36,15 @@
     "helmet": "^3.22.0",
     "jimp": "^0.22.8",
     "knex": "^2.4.0",
-    "knex-paginate": "^3.0.2",
+    "knex-paginate": "^3.1.1",
     "loglevel": "^1.7.1",
     "mp3-duration": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "node-lame": "^1.3.2",
     "nostr-tools": "^1.16.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "podcast-index-api": "^1.1.10",
+    "sanitize-html": "^2.11.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
