--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@prisma/client": "^4.15.0",
     "@sentry/node": "^7.60.0",
     "@types/multer": "^1.4.7",
+    "@zbd/node": "^0.6.3",
     "aws-sdk": "^2.1395.0",
+    "axios": "^1.6.2",
     "body-parser": "^1.19.0",
     "compression": "1.7.4",
     "cors": "^2.8.5",
