--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "license": "MIT",
   "dependencies": {
     "@noble/hashes": "^1.3.2",
+    "@node-lightning/invoice": "^0.28.0",
     "@podverse/podcast-feed-parser": "https://github.com/joshr4/podcast-feed-parser/tree/add-time-split-support",
     "@prisma/client": "^4.15.0",
     "@sentry/node": "^7.60.0",
     "@types/multer": "^1.4.7",
-    "@zbd/node": "^0.6.3",
     "aws-sdk": "^2.1395.0",
     "axios": "^1.6.2",
     "body-parser": "^1.19.0",
@@ -34,13 +34,13 @@
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.1.5",
     "firebase-admin": "^11.9.0",
     "helmet": "^3.22.0",
     "jimp": "^0.22.8",
     "knex": "^2.4.0",
     "knex-paginate": "^3.1.1",
     "loglevel": "^1.7.1",
-    "mp3-duration": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "node-lame": "^1.3.2",
     "nostr-tools": "^1.17.0",
