--- a/prod.cloudbuild.yaml
+++ b/prod.cloudbuild.yaml
@@ -33,7 +33,7 @@ steps:
       - "PODCAST_INDEX_KEY=${_PODCAST_INDEX_KEY}"
       - "PODCAST_INDEX_SECRET=${_PODCAST_INDEX_SECRET}"
       - "ZBD_CALLBACK_URL=${_ZBD_CALLBACK_URL}"
-    secretEnv: ["PG_PASSWORD", "AWS_SECRET_ACCESS_KEY"]
+    secretEnv: ["PG_PASSWORD", "AWS_SECRET_ACCESS_KEY", "ZBD_API_KEY"]
   - name: node:16.20.0
     id: migrate db
     entrypoint: npm
