Use new image (#174)
* Use new image

* Using single image

--- a/staging.cloudbuild.yaml
+++ b/staging.cloudbuild.yaml
@@ -49,7 +49,8 @@ steps:
     id: generate prisma
     entrypoint: npm
     args: ["run", "generate"]
-  - name: "gcr.io/cloud-builders/gcloud"
+  - name: blastshielddown/wavlake-catalog:latest
+    entrypoint: "gcloud"
     args: ["app", "deploy", "./staging.yaml"]
 availableSecrets:
   secretManager:
