Staging to main (#180)
* use track_info view

* check if content is already in the library

* camel case get library response

* rm cols that arent in the view

* rm album and artist cols

* revert test pubkey

* order library results by date, newest first

* Add artist name to album library call (#127)

* add artist name to album library response

* Update controllers/library.ts

Co-authored-by: Michael Rhee <77257032+blastshielddown@users.noreply.github.com>

---------

Co-authored-by: Michael Rhee <77257032+blastshielddown@users.noreply.github.com>

* Fix where clause on add (#128)

* Add create date to preamp table (#131)

* Add date to preamp table

* Update prisma

* Podcast rss (#130)

* Fix add to library (#129)

* use track_info view

* check if content is already in the library

* camel case get library response

* rm cols that arent in the view

* rm album and artist cols

* revert test pubkey

* order library results by date, newest first

* Add artist name to album library call (#127)

* add artist name to album library response

* Update controllers/library.ts

Co-authored-by: Michael Rhee <77257032+blastshielddown@users.noreply.github.com>

---------

Co-authored-by: Michael Rhee <77257032+blastshielddown@users.noreply.github.com>

* Fix where clause on add (#128)

---------

Co-authored-by: Josh Remaley <joshremaley@gmail.com>

* add rss feed migration

* add rss feed endpoint

* Update db/migrations/20231009165641_add_ext_rss_feeds.js

Co-authored-by: Michael Rhee <77257032+blastshielddown@users.noreply.github.com>

* rename table

* rename rss endpoint to feeds

* rm stray log

* add rss-parser

* parse feed on backend

* add podverse parser

* use podverse parser to get rss feed info

* add get single rss feed endpoint

* add value recipient object type

* add podcast guid field

* alias guid key

* remake external feed migration file

* add podac

--- a/prod.cloudbuild.yaml
+++ b/prod.cloudbuild.yaml
@@ -32,7 +32,8 @@ steps:
       - "SENTRY_TRACES_SAMPLE_RATE=${_SENTRY_TRACES_SAMPLE_RATE}"
       - "PODCAST_INDEX_KEY=${_PODCAST_INDEX_KEY}"
       - "PODCAST_INDEX_SECRET=${_PODCAST_INDEX_SECRET}"
-    secretEnv: ["PG_PASSWORD", "AWS_SECRET_ACCESS_KEY"]
+      - "ZBD_CALLBACK_URL=${_ZBD_CALLBACK_URL}"
+    secretEnv: ["PG_PASSWORD", "AWS_SECRET_ACCESS_KEY", "ZBD_API_KEY"]
   - name: node:16.20.0
     id: migrate db
     entrypoint: npm
@@ -56,6 +57,8 @@ availableSecrets:
       env: "PG_PASSWORD"
     - versionName: projects/$PROJECT_ID/secrets/AWS_S3_MEDIA_SECRET_PROD/versions/latest
       env: "AWS_SECRET_ACCESS_KEY"
+    - versionName: projects/$PROJECT_ID/secrets/ZBD_API_KEY/versions/latest
+      env: "ZBD_API_KEY"
 timeout: "900s"
 options:
   logging: CLOUD_LOGGING_ONLY
