--- a/staging.cloudbuild.yaml
+++ b/staging.cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
-  - name: node:16.20.0
+  - name: blastshielddown/wavlake-catalog:latest
     id: install
     entrypoint: npm
     args: ["install"]
-  - name: node:16.20.0
+  - name: blastshielddown/wavlake-catalog:latest
     id: build
     entrypoint: npm
     args: ["run", "build"]
-  - name: node:16.20.0
+  - name: blastshielddown/wavlake-catalog:latest
     id: create env
     entrypoint: npm
     args: ["run", "create-env"]
@@ -32,8 +32,9 @@ steps:
       - "SENTRY_TRACES_SAMPLE_RATE=${_SENTRY_TRACES_SAMPLE_RATE}"
       - "PODCAST_INDEX_KEY=${_PODCAST_INDEX_KEY}"
       - "PODCAST_INDEX_SECRET=${_PODCAST_INDEX_SECRET}"
-    secretEnv: ["PG_PASSWORD", "AWS_SECRET_ACCESS_KEY"]
-  - name: node:16.20.0
+      - "ZBD_CALLBACK_URL=${_ZBD_CALLBACK_URL}"
+    secretEnv: ["PG_PASSWORD", "AWS_SECRET_ACCESS_KEY", "ZBD_API_KEY"]
+  - name: blastshielddown/wavlake-catalog:latest
     id: migrate db
     entrypoint: npm
     args: ["run", "migrate"]
@@ -44,7 +45,7 @@ steps:
       - "PG_DATABASE=${_PG_DATABASE}"
       - "PG_USER=${_PG_USER}"
     secretEnv: ["PG_PASSWORD"]
-  - name: node:16.20.0
+  - name: blastshielddown/wavlake-catalog:latest
     id: generate prisma
     entrypoint: npm
     args: ["run", "generate"]
@@ -56,6 +57,8 @@ availableSecrets:
       env: "PG_PASSWORD"
     - versionName: projects/$PROJECT_ID/secrets/AWS_S3_MEDIA_SECRET_STAGING/versions/latest
       env: "AWS_SECRET_ACCESS_KEY"
+    - versionName: projects/$PROJECT_ID/secrets/ZBD_API_KEY/versions/latest
+      env: "ZBD_API_KEY"
 timeout: "900s"
 options:
   logging: CLOUD_LOGGING_ONLY
