--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+*node_modules
+*.pnp
 .pnp.js
 
 # db
@@ -12,16 +12,16 @@
 /coverage
 
 # production
-/build
-/dist
+*build
+*dist
 
 # misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.DS_Store
+*.env
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
