--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,6 @@
 
     /* Modules */
     "module": "commonjs" /* Specify what module code is generated. */,
-    "exclude": ["cronjobs"] /* Exclude cronjobs from compilation */,
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
@@ -108,5 +107,6 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude": ["cronjobs/**/*", "./dist/**/*", "node_modules/**/*"]
 }
