--- a/cronjobs/publish-feeds/package.json
+++ b/cronjobs/publish-feeds/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
+    "prisma": "^4.15.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   },
