--- a/cronjobs/publish-feeds/package.json
+++ b/cronjobs/publish-feeds/package.json
@@ -7,6 +7,7 @@
     "node": "=v16.20.0"
   },
   "scripts": {
+    "create-env": "printenv > .env",
     "start": "node -r tsconfig-paths/register -r ts-node/register ./index.ts",
     "dev": "NODE_ENV=dev concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\""
   },
