--- a/staging.cronjob.publish-feeds.yaml
+++ b/staging.cronjob.publish-feeds.yaml
@@ -1,10 +1,50 @@
 steps:
+  # Build the container image
   - name: "gcr.io/cloud-builders/docker"
-    script: |
-      docker build -t publish-feeds:latest -f cronjobs/publish-feeds/Dockerfile .
+    args:
+      [
+        "build",
+        "-t",
+        "gcr.io/$PROJECT_ID/publish-feeds:latest",
+        "-f",
+        "cronjobs/publish-feeds/Dockerfile",
+        ".",
+      ]
+  # Add env vars and secrets
+  - name: "gcr.io/$PROJECT_ID/publish-feeds:latest"
+    id: create env
+    entrypoint: npm
+    args: ["run", "create-env"]
+    env:
+      - "LOGLEVEL=${_LOGLEVEL}"
+      - "LOOKBACK_MINUTES=${_LOOKBACK_MINUTES}"
+      - "PG_HOST=${_PG_HOST}"
+      - "PG_PORT=${_PG_PORT}"
+      - "PG_DATABASE=${_PG_DATABASE}"
+      - "PG_USER=${_PG_USER}"
+      - "PODCAST_INDEX_KEY=${_PODCAST_INDEX_KEY}"
+      - "PODCAST_INDEX_SECRET=${_PODCAST_INDEX_SECRET}"
+    secretEnv: ["PG_PASSWORD"]
+  # Deploy container image to Cloud Run
+  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
+    entrypoint: gcloud
+    args:
+      [
+        "run",
+        "deploy",
+        "publish-feeds",
+        "--image",
+        "gcr.io/$PROJECT_ID/publish-feeds:latest",
+        "--region",
+        "us-central1",
+      ]
 images:
-  - "publish-feeds:latest"
+  - "gcr.io/$PROJECT_ID/publish-feeds:latest"
 timeout: "900s"
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/WAVLAKE_SERVER_STAGING_ADMIN_PASSWORD/versions/latest
+      env: "PG_PASSWORD"
 options:
   logging: CLOUD_LOGGING_ONLY
   pool:
