--- a/staging.cronjob.publish-feeds.yaml
+++ b/staging.cronjob.publish-feeds.yaml
@@ -5,13 +5,13 @@ steps:
       [
         "build",
         "-t",
-        "gcr.io/$PROJECT_ID/publish-feeds:latest",
+        "us-central1-docker.pkg.dev/$PROJECT_ID/cronjobs/publish-feeds:latest",
         "-f",
         "cronjobs/publish-feeds/Dockerfile",
         ".",
       ]
   # Add env vars and secrets
-  - name: "gcr.io/$PROJECT_ID/publish-feeds:latest"
+  - name: "us-central1-docker.pkg.dev/$PROJECT_ID/cronjobs/publish-feeds:latest"
     id: create env
     entrypoint: npm
     args: ["run", "create-env"]
@@ -25,9 +25,13 @@ steps:
       - "PODCAST_INDEX_KEY=${_PODCAST_INDEX_KEY}"
       - "PODCAST_INDEX_SECRET=${_PODCAST_INDEX_SECRET}"
     secretEnv: ["PG_PASSWORD"]
-  # Push the container image to Container Registry
+  # Push the container image to Artifact Registry
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/publish-feeds:latest"]
+    args:
+      [
+        "push",
+        "us-central1-docker.pkg.dev/$PROJECT_ID/cronjobs/publish-feeds:latest",
+      ]
   # Deploy container image to Cloud Run
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
     entrypoint: gcloud
@@ -38,12 +42,12 @@ steps:
         "deploy",
         "publish-feeds",
         "--image",
-        "gcr.io/$PROJECT_ID/publish-feeds:latest",
+        "us-central1-docker.pkg.dev/$PROJECT_ID/cronjobs/publish-feeds:latest",
         "--region",
         "us-central1",
       ]
 images:
-  - "gcr.io/$PROJECT_ID/publish-feeds:latest"
+  - "us-central1-docker.pkg.dev/$PROJECT_ID/cronjobs/publish-feeds:latest"
 timeout: "900s"
 availableSecrets:
   secretManager:
