--- a/cronjobs/npub-metadata/package.json
+++ b/cronjobs/npub-metadata/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npub-metadata",
+  "name": "publish-feeds",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,7 +17,8 @@
     "@prisma/client": "^4.15.0",
     "axios": "^1.6.2",
     "dotenv": "^16.1.3",
-    "loglevel": "^1.7.1"
+    "loglevel": "^1.7.1",
+    "podcast-index-api": "^1.1.10"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
