--- a/services/npub-metadata/package.json
+++ b/services/npub-metadata/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "dotenv": "^16.1.3",
+    "express": "^4.18.2",
     "loglevel": "^1.7.1",
-    "podcast-index-api": "^1.1.10",
     "nostr-tools": "^1.17.0",
+    "podcast-index-api": "^1.1.10",
     "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
