--- a/service.npub-metadata.yaml
+++ b/service.npub-metadata.yaml
@@ -23,7 +23,7 @@ steps:
     args:
       [
         "run",
-        "jobs",
+        "service",
         "deploy",
         "npub-metadata",
         "--image",
