update docker file

--- a/services/npub-metadata/Dockerfile
+++ b/services/npub-metadata/Dockerfile
@@ -11,10 +11,10 @@ WORKDIR /app/services/npub-metadata
 RUN npm install --unsafe-perm ||  ((if [ -f npm-debug.log ]; then cat npm-debug.log; fi) && false)
 
 # Generate Prisma client from repo root
-WORKDIR /app
-RUN npm install --unsafe-perm ||  ((if [ -f npm-debug.log ]; then cat npm-debug.log; fi) && false)
-RUN npx tsc
-RUN npx prisma generate
+# WORKDIR /app
+# RUN npm install --unsafe-perm ||  ((if [ -f npm-debug.log ]; then cat npm-debug.log; fi) && false)
+# RUN npx tsc
+# RUN npx prisma generate
 
 # Return to npub-metadata cronjob directory
 WORKDIR /app/services/npub-metadata
