update yaml to services

--- a/service.npub-metadata.yaml
+++ b/service.npub-metadata.yaml
@@ -23,7 +23,7 @@ steps:
     args:
       [
         "run",
-        "service",
+        "services",
         "deploy",
         "npub-metadata",
         "--image",
