--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,5 +108,10 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "exclude": ["cronjobs/**/*", "./dist/**/*", "node_modules/**/*"]
+  "exclude": [
+    "services/**/*",
+    "cronjobs/**/*",
+    "./dist/**/*",
+    "node_modules/**/*"
+  ]
 }
