add env var for NPUB_UPDATE_SERVICE_URL

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ PODCAST_INDEX_SECRET=secret
 #ZBD
 ZBD_API_KEY=xxxxx
 ZBD_CALLBACK_URL=https://url.com
+
+# Npub metadata udpate service
+NPUB_UPDATE_SERVICE_URL=localhost:port
