--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "nostr-tools": "^1.17.0",
     "pg": "^8.7.1",
     "podcast-index-api": "^1.1.10",
-    "sanitize-html": "^2.11.0"
+    "sanitize-html": "^2.11.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
