--- a/services/payments/tsconfig.json
+++ b/services/payments/tsconfig.json
@@ -32,7 +32,8 @@
     "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@prismalocal/*": ["../../prisma/*"],
-      "@library/*": ["../../library/*"]
+      "@library/*": ["../../library/*"],
+      "@middlewares/*": ["../../middlewares/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
