--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.15",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.22.15",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.2.5",
+    "babel-jest": "^29.7.0",
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
