--- a/services/payments/tsconfig.json
+++ b/services/payments/tsconfig.json
@@ -29,7 +29,7 @@
     "module": "commonjs" /* Specify what module code is generated. */,
     // "rootDir": "./../../" /* Specify the root folder within your source files. */,
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
+    "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@prismalocal/*": ["../../prisma/*"],
       "@library/*": ["../../library/*"],
@@ -110,5 +110,11 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": [
+    "../../library/**/*",
+    "../../prisma/**/*",
+    "../../middlewares/**/*",
+    "./**/*"
+  ]
 }
