Update build refs

--- a/service.accounting.yaml
+++ b/service.accounting.yaml
@@ -5,9 +5,9 @@ steps:
       [
         "build",
         "-t",
-        "us-central1-docker.pkg.dev/$PROJECT_ID/services/payments:latest",
+        "us-central1-docker.pkg.dev/$PROJECT_ID/services/accounting:latest",
         "-f",
-        "services/payments/Dockerfile",
+        "services/accounting/Dockerfile",
         ".",
       ]
   # Push the container image to Artifact Registry
@@ -15,7 +15,7 @@ steps:
     args:
       [
         "push",
-        "us-central1-docker.pkg.dev/$PROJECT_ID/services/payments:latest",
+        "us-central1-docker.pkg.dev/$PROJECT_ID/services/accounting:latest",
       ]
   # Deploy container image to Cloud Run
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
@@ -24,14 +24,14 @@ steps:
       [
         "run",
         "deploy",
-        "payments",
+        "accounting",
         "--image",
-        "us-central1-docker.pkg.dev/$PROJECT_ID/services/payments:latest",
+        "us-central1-docker.pkg.dev/$PROJECT_ID/services/accounting:latest",
         "--region",
         "us-central1",
       ]
 images:
-  - "us-central1-docker.pkg.dev/$PROJECT_ID/services/payments:latest"
+  - "us-central1-docker.pkg.dev/$PROJECT_ID/services/accounting:latest"
 timeout: "900s"
 options:
   logging: CLOUD_LOGGING_ONLY
