--- a/services/accounting/package.json
+++ b/services/accounting/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "express-async-handler": "^1.2.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "loglevel": "^1.7.1",
@@ -22,6 +23,7 @@
     "websocket-polyfill": "^0.0.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
     "@types/node": "^20.2.5",
