--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ PODCAST_INDEX_SECRET=secret
 
 #ZBD
 ZBD_API_KEY=xxxxx
-ZBD_CALLBACK_URL=https://url.com
+ACCOUNTING_CALLBACK_URL=https://url.com/v1/callback
 
 # Npub metadata udpate service
 NPUB_UPDATE_SERVICE_URL=localhost:port
