--- a/services/accounting/package.json
+++ b/services/accounting/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "@node-lightning/invoice": "^0.28.0",
     "express-async-handler": "^1.2.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
