update env example

--- a/services/accounting/.env.example
+++ b/services/accounting/.env.example
@@ -6,3 +6,5 @@ PG_PORT=5432
 PG_DATABASE=wavlake-local
 PG_USER=wavlake
 PG_PASSWORD=wavlake
+ZBD_API_KEY=your-zbd-api-key
+ACCOUNTING_CALLBACK_URL=http://accounting.wavlake.com/v1/callback
