add new env var

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ GOOGLE_APPLICATION_CREDENTIALS="/path/to/firebase_project_creds.json"
 # you may need to wrap the key in double quotes
 PODCAST_INDEX_KEY=key
 PODCAST_INDEX_SECRET=secret
+PODCAST_INDEX_UA=user_agent
 
 #ZBD
 ZBD_API_KEY=xxxxx
