--- a/cronjobs/publish-feeds/.env.example
+++ b/cronjobs/publish-feeds/.env.example
@@ -11,3 +11,4 @@ PG_PASSWORD=wavlake
 # you may need to wrap the key in double quotes
 PODCAST_INDEX_KEY=key
 PODCAST_INDEX_SECRET=secret
+PODCAST_INDEX_UA=user_agent
