--- a/prod.cloudbuild.yaml
+++ b/prod.cloudbuild.yaml
@@ -32,6 +32,7 @@ steps:
       - "SENTRY_TRACES_SAMPLE_RATE=${_SENTRY_TRACES_SAMPLE_RATE}"
       - "PODCAST_INDEX_KEY=${_PODCAST_INDEX_KEY}"
       - "PODCAST_INDEX_SECRET=${_PODCAST_INDEX_SECRET}"
+      - "PODCAST_INDEX_UA=${_PODCAST_INDEX_UA}"
       - "ZBD_CALLBACK_URL=${_ZBD_CALLBACK_URL}"
       - "NPUB_UPDATE_SERVICE_URL=${_NPUB_UPDATE_SERVICE_URL}"
     secretEnv: ["PG_PASSWORD", "AWS_SECRET_ACCESS_KEY", "ZBD_API_KEY"]
