--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,6 @@ ACCOUNTING_CALLBACK_URL=https://url.com/v1/callback
 
 # Npub metadata udpate service
 NPUB_UPDATE_SERVICE_URL=localhost:port
+
+# Nostr
+NOSTR_SECRET=xxxxx
