Add callback logic for outgoing invoice (#292)
* add callback logic for outgoing invoice

* add NOSTR_SECRET

* rm bracket

* add withdrawal logic to lib

* only decrement user balance if completed

* only decrement user balance if completed

* add fee to total

* undo testing comments

* address pr feedback

* rm import

--- a/services/accounting/.env.example
+++ b/services/accounting/.env.example
@@ -8,3 +8,6 @@ PG_USER=wavlake
 PG_PASSWORD=wavlake
 ZBD_API_KEY=your-zbd-api-key
 ACCOUNTING_CALLBACK_URL=http://accounting.wavlake.com/v1/callback
+
+# NOSTR
+NOSTR_SECRET=xxxx
