--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "=v16.20.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --testPathIgnorePatterns=\"integration\"",
+    "integration": "jest ./tests/integration",
     "start": "node dist/index.js",
     "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
     "create-env": "printenv > .env",
