--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest --testPathIgnorePatterns=\"integration\"",
-    "integration": "jest ./tests/integration",
+    "integration": "jest ./tests/integration --detectOpenHandles --forceExit",
     "start": "node dist/index.js",
     "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
     "create-env": "printenv > .env",
