--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --testPathIgnorePatterns=\"integration\"",
     "integration": "jest ./tests/integration --detectOpenHandles --forceExit",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
+    "dev": "NODE_ENV=dev concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
     "create-env": "printenv > .env",
     "build": "npx tsc",
     "migrate": "knex --knexfile ./db/knexfile.js migrate:latest",
