--- a/cronjobs/forwarder/.env.example
+++ b/cronjobs/forwarder/.env.example
@@ -6,3 +6,7 @@ PG_PORT=5432
 PG_DATABASE=wavlake-local
 PG_USER=wavlake
 PG_PASSWORD=wavlake
+
+# ZBD
+ZBD_API_KEY=xxxxx
+ACCOUNTING_CALLBACK_URL=https://example.com/v1/callback
