--- a/cronjobs/forwarder/package.json
+++ b/cronjobs/forwarder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "accounting",
+  "name": "forwarder",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,22 +9,18 @@
   "scripts": {
     "create-env": "printenv > .env",
     "start": "node -r tsconfig-paths/register -r ts-node/register ./index.ts",
-    "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\""
+    "dev": "NODE_ENV=dev concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\""
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.15.0",
-    "@node-lightning/invoice": "^0.28.0",
-    "express-async-handler": "^1.2.0",
+    "axios": "^1.6.2",
     "dotenv": "^16.1.3",
-    "express": "^4.18.2",
     "loglevel": "^1.7.1",
-    "nostr-tools": "^1.17.0",
-    "websocket-polyfill": "^0.0.3"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
     "@types/node": "^20.2.5",
