Update ip miiddleware

--- a/services/accounting/.env.example
+++ b/services/accounting/.env.example
@@ -1,13 +1,29 @@
 LOGLEVEL=debug
 
+RANDOM_SAMPLE_SIZE=70
+
+PROXY_COUNT=1
+CORS_HOST='*'
+
 # POSTGRES CONFIG
 PG_HOST=localhost
 PG_PORT=5432
 PG_DATABASE=wavlake-local
 PG_USER=wavlake
 PG_PASSWORD=wavlake
-ZBD_API_KEY=your-zbd-api-key
-ACCOUNTING_CALLBACK_URL=http://accounting.wavlake.com/v1/callback
+
+# For use with Prisma's DB pull tool only
+DATABASE_URL="postgres://${PG_USER}:${PG_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DATABASE}?schema=public"
+
+SENTRY_DSN=https:/sentry.io/123
+SENTRY_TRACES_SAMPLE_RATE=0.0
+
+GOOGLE_APPLICATION_CREDENTIALS="/credentials.json"
+
+# ZBD
+ZBD_API_KEY=xxxxx
+ACCOUNTING_CALLBACK_URL=https://example.com/v1/callback
 
 # NOSTR
 NOSTR_SECRET=xxxx
+RELAY_URL=ws://localhost:8008
