Accounting and Forwarder Services (#338)
* Setup payment service (#252)

* Add initial files

* Update README

* Setup initial payment route

* Add libs from server

* Update payment checks, add get payment

* Fix auto-build, logging

* Fix logging

* Fix undefined case, add test

* Add custom client

* Switch to accounting, update files (#254)

* Switch to accounting, update files

* Update build refs

* Add user id to content queries (#253) (#256)

* add ownerId to views

* add ownerId to albums and episodes

* redo migration

* add TODO comment

* rm comment

* add get invoice endpoint (#255)

* Add user id to content queries (#253)

* add ownerId to views

* add ownerId to albums and episodes

* redo migration

* add TODO comment

* rm comment

* add get invoice endpoint

* change to query external_receive table

* add other invoice routes

* rm ID param

* add comments

* add migration

* fix migration

* Update db/migrations/20240129191312_update_invoice_tables.js

Co-authored-by: Michael Rhee <77257032+blastshielddown@users.noreply.github.com>

---------

Co-authored-by: Michael Rhee <77257032+blastshielddown@users.noreply.github.com>

* Fix outgoing keysends (#257)

* Fix hex-encoding

* Clean up logs

* Replace magic number

* Add ZBD interfaces and callback route (#259)

* mv zbd files to a new folder

* add response payload interfaces

* rm comments

* add comments

* mock up callback routes

* Update trust proxy setting for lb, add logging

* Add basic create invoice process

* Update deps

* Add error handling

* Change callback env var name, clean up

* Update amount

* Update staging build config

* Clean up content references

* Update library/zbd/zbdClient.ts

Co-authored-by: joshr4 <joshremaley@gmail.com>

* Add keysend callback (#260)

* update imports

* add keysend process logic

* rm uncessary code

* rename yaml to staging

--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,10 @@ PODCAST_INDEX_UA=user_agent
 
 #ZBD
 ZBD_API_KEY=xxxxx
-ZBD_CALLBACK_URL=https://url.com
+ACCOUNTING_CALLBACK_URL=https://url.com/v1/callback
 
 # Npub metadata udpate service
 NPUB_UPDATE_SERVICE_URL=localhost:port
+
+# Nostr
+NOSTR_SECRET=xxxxx
