--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "=v16.20.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --testPathIgnorePatterns=\"integration\"",
+    "integration": "jest ./tests/integration --detectOpenHandles --forceExit",
     "start": "node dist/index.js",
     "dev": "NODE_ENV=dev concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
     "create-env": "printenv > .env",
@@ -21,7 +22,6 @@
   "license": "MIT",
   "dependencies": {
     "@noble/hashes": "^1.3.2",
-    "@node-lightning/invoice": "^0.28.0",
     "@podverse/podcast-feed-parser": "https://github.com/joshr4/podcast-feed-parser/tree/add-time-split-support",
     "@prisma/client": "^4.15.0",
     "@sentry/node": "^7.60.0",
@@ -51,11 +51,13 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.15",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.22.15",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.2.5",
+    "babel-jest": "^29.7.0",
     "concurrently": "^8.1.0",
     "jest": "^29.6.4",
     "nodemon": "^2.0.22",
