--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-fetch": "^2.7.0",
     "node-lame": "^1.3.2",
     "nostr-tools": "^1.17.0",
+    "oauth": "^0.10.0",
     "pg": "^8.7.1",
     "podcast-index-api": "^1.1.10",
     "sanitize-html": "^2.11.0",
