add new account routes

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,10 @@ PODCAST_INDEX_UA=user_agent
 #ZBD
 ZBD_API_KEY=xxxxx
 ACCOUNTING_CALLBACK_URL=https://url.com/v1/callback
+ZBD_CLIENT_ID=xxxxx
+ZBD_CLIENT_SECRET=xxxxx
+ZBD_API_URL=https://api.zebedee.io/v0/
+ZBD_REDIRECT_URL=http://localhost:3210/v1/accounts/zbd/callback
 
 # Npub metadata udpate service
 NPUB_UPDATE_SERVICE_URL=localhost:port
