--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,8 @@ PODCAST_INDEX_UA=user_agent
 #ZBD
 ZBD_API_KEY=xxxxx
 ACCOUNTING_CALLBACK_URL=https://url.com/v1/callback
+ZBD_OAUTH_CLIENT_ID=xxxxx
+ZBD_OAUTH_CLIENT_SECRET=xxxxx
 
 # Npub metadata udpate service
 NPUB_UPDATE_SERVICE_URL=localhost:port
