--- a/services/rss/.env.example
+++ b/services/rss/.env.example
@@ -11,3 +11,7 @@ PG_PORT=5432
 PG_DATABASE=wavlake-local
 PG_USER=wavlake
 PG_PASSWORD=wavlake
+
+# SENTRY
+SENTRY_DSN=https://xxxx.ingest.sentry.io/xxxxx
+SENTRY_TRACES_SAMPLE_RATE=0.0
