--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "loglevel": "^1.7.1",
-    "podcast": "^2.0.1"
+    "podcast": "^2.0.1",
+    "@sentry/node": "^7.60.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
