--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "express-async-handler": "^1.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "loglevel": "^1.7.1",
