--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -18,6 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "body-parser": "^1.19.0",
+    "compression": "1.7.4",
+    "helmet": "^3.22.0",
     "loglevel": "^1.7.1",
     "podcast": "^2.0.1",
     "@sentry/node": "^7.60.0"
