--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "create-env": "printenv > .env",
     "start": "node -r tsconfig-paths/register -r ts-node/register ./index.ts",
-    "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\""
+    "dev": "NODE_ENV=dev DEBUG=express:router concurrently \"npx tsc --watch\" \"nodemon dist/index.js --watch\"",
+    "build": "npx tsc"
   },
   "author": "",
   "license": "MIT",
