--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -24,7 +24,10 @@
     "helmet": "^3.22.0",
     "loglevel": "^1.7.1",
     "podcast": "^2.0.1",
-    "@sentry/node": "^7.60.0"
+    "@sentry/node": "^7.60.0",
+    "knex": "^2.4.0",
+    "knex-paginate": "^3.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
