--- a/services/rss/.env.example
+++ b/services/rss/.env.example
@@ -12,6 +12,9 @@ PG_DATABASE=wavlake-local
 PG_USER=wavlake
 PG_PASSWORD=wavlake
 
+# LIGHTNING
+RECEIVING_PUBLIC_KEY=123456
+
 # SENTRY
 SENTRY_DSN=https://xxxx.ingest.sentry.io/xxxxx
 SENTRY_TRACES_SAMPLE_RATE=0.0
