Update to latest nostr-tools lib

--- a/services/accounting/.env.example
+++ b/services/accounting/.env.example
@@ -26,4 +26,4 @@ ACCOUNTING_CALLBACK_URL=https://example.com/v1/callback
 
 # NOSTR
 NOSTR_SECRET=xxxx
-RELAY_URL=ws://localhost:8008
+RELAY_LIST=wss://relay.example.com,wss://relay.another.com
