--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "node-lame": "^1.3.2",
-    "nostr-tools": "^1.17.0",
+    "nostr-tools": "^2.5.2",
     "oauth": "^0.10.0",
     "pg": "^8.7.1",
     "podcast-index-api": "^1.1.10",
     "sanitize-html": "^2.11.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
