Use wavlake relay env var

--- a/.env.example
+++ b/.env.example
@@ -51,4 +51,5 @@ NPUB_UPDATE_SERVICE_URL=localhost:port
 
 # Nostr
 NOSTR_SECRET=xxxxx
+WAVLAKE_RELAY=ws://localhost:8008
 RELAY_LIST=wss://relay.example.com,wss://relay.another.com
