Fix keysend logic, add internal boost filter

--- a/services/accounting/.env.example
+++ b/services/accounting/.env.example
@@ -15,6 +15,8 @@ PG_PASSWORD=wavlake
 # For use with Prisma's DB pull tool only
 DATABASE_URL="postgres://${PG_USER}:${PG_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DATABASE}?schema=public"
 
+KEYSEND_RECEIVING_PUBLIC_KEY=xxxx
+
 SENTRY_DSN=https:/sentry.io/123
 SENTRY_TRACES_SAMPLE_RATE=0.0
 
