--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ AWS_CDN_ID=<AWS_CDN_ID>
 LOCAL_UPLOAD_PATH=/tmp/catalog/upload
 LOCAL_CONVERT_PATH=/tmp/catalog/convert
 
+KEYSEND_RECEIVING_PUBLIC_KEY=xxx
+
 SENTRY_DSN=https://<projectkey>@<account>.ingest.sentry.io/<account>
 SENTRY_TRACES_SAMPLE_RATE=1.0
 
