Deployment 240603 - Accounting cutover (#426)
* Update schema, add back invoice route

* Clean up amp types

* Add payment type

* Add error field

* Add type to db updates, clean up error responses

* Disallow invoices for deleted content

* Update payment type lookup

* Update to latest nostr-tools lib

* Fix created at on zap receipt

* Add party mode handling

* Use wavlake relay env var

* Set up common relays file

* Update nip-98 validate

* Add preimage and request

* Clean up routes

* Remove list of relays from env

* Update playlist controllers (#396)

* clean up playlist logic

* create composite auth middleware

* Squashed commit of the following:

commit cf3433015978eab52d963adf05fa7a81260fc47e
Author: Josh Remaley <joshremaley@gmail.com>
Date:   Wed May 1 15:36:51 2024 -0500

    add migration and update playlist controllers

commit 20b600502443300008475b4ab1aa17d1c5a50c63
Author: Josh Remaley <joshremaley@gmail.com>
Date:   Wed May 1 13:41:26 2024 -0500

    update random endpoint controller

* udpate schema

* remove lines from schema

* update reorder controller

* fix schema

* fix schema

* add content owner check

* improve composite auth middleware

* rm log

* add comment

* Fix schema

* Move update npub metadata

* Fix hybrid auth

* Fix order int in schema

* Clean up withdrawals

* Add error handling on withdraws

* Add new user playlist route (#410)

* add new user playlist route

* update comment

* Update deposit logic

* Fix outgoing keysends

* Fix keysend logic, add internal boost filter

* Update pool get

* Update npub metadata (#412)

* add new cols

* update nostr-tools

* update migration

* update migration and schema

* add follow and follower calls

* add early return

* rm import

* rm imports

* revert nostr file changes

* import lib nostr calls

* add metadata to get_account

* revert field name change


--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ AWS_CDN_ID=<AWS_CDN_ID>
 LOCAL_UPLOAD_PATH=/tmp/catalog/upload
 LOCAL_CONVERT_PATH=/tmp/catalog/convert
 
+KEYSEND_RECEIVING_PUBLIC_KEY=xxx
+
 SENTRY_DSN=https://<projectkey>@<account>.ingest.sentry.io/<account>
 SENTRY_TRACES_SAMPLE_RATE=1.0
 
@@ -51,3 +53,4 @@ NPUB_UPDATE_SERVICE_URL=localhost:port
 
 # Nostr
 NOSTR_SECRET=xxxxx
+WAVLAKE_RELAY=ws://localhost:8008
