--- a/services/nwc/package.json
+++ b/services/nwc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "accounting",
+  "name": "nwc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,12 +16,12 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "@node-lightning/invoice": "^0.28.0",
-    "express-async-handler": "^1.2.0",
     "dotenv": "^16.1.3",
-    "express": "^4.18.2",
     "loglevel": "^1.7.1",
     "nostr-tools": "^2.5.2",
-    "websocket-polyfill": "^0.0.3"
+    "websocket-polyfill": "^0.0.3",
+    "knex": "^2.4.0",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
