--- a/staging.cloudbuild.yaml
+++ b/staging.cloudbuild.yaml
@@ -36,6 +36,7 @@ steps:
       - "ZBD_CALLBACK_URL=${_ZBD_CALLBACK_URL}"
       - "NPUB_UPDATE_SERVICE_URL=${_NPUB_UPDATE_SERVICE_URL}"
       - "ZBD_OAUTH_CLIENT_ID=${_ZBD_OAUTH_CLIENT_ID}"
+      - "API_AUTH_CLIENT_KEY=${_API_AUTH_CLIENT_KEY}"
     secretEnv:
       [
         "PG_PASSWORD",
