Fix response typing

--- a/services/accounting/tsconfig.json
+++ b/services/accounting/tsconfig.json
@@ -33,7 +33,8 @@
     "paths": {
       "@prismalocal/*": ["../../prisma/*"],
       "@library/*": ["../../library/*"],
-      "@middlewares/*": ["../../middlewares/*"]
+      "@middlewares/*": ["../../middlewares/*"],
+      "@typescatalog/*": ["../../types/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
@@ -115,6 +116,7 @@
     "../../library/**/*",
     "../../prisma/**/*",
     "../../middlewares/**/*",
+    "../../types/**/*",
     "./**/*"
   ]
 }
