--- a/services/accounting/package.json
+++ b/services/accounting/package.json
@@ -22,7 +22,9 @@
     "express": "^4.21.0",
     "loglevel": "^1.7.1",
     "nostr-tools": "^2.5.2",
-    "websocket-polyfill": "^0.0.3"
+    "websocket-polyfill": "^0.0.3",
+    "@google-cloud/logging-winston": "^6.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
