--- a/services/nwc/package.json
+++ b/services/nwc/package.json
@@ -21,7 +21,9 @@
     "nostr-tools": "^2.5.2",
     "websocket-polyfill": "^0.0.3",
     "knex": "^2.5.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "@google-cloud/logging-winston": "^6.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
