--- a/services/rss/package.json
+++ b/services/rss/package.json
@@ -29,7 +29,9 @@
     "knex": "^2.5.1",
     "knex-paginate": "^3.1.1",
     "uuid": "^9.0.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "@google-cloud/logging-winston": "^6.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
