feat(tests): add coverage directory to tsconfig exclusion and update test configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -114,6 +114,7 @@
     "./dist/**/*",
     "node_modules/**/*",
     "test-*.js",
-    "validate-*.js"
+    "validate-*.js",
+    "coverage-*/**/*"
   ]
 }
